modified date sample based on new database structure

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div>
-		<label>Transaction Date (mm-dd-yy):</label>
+		<label>Transaction Date (Jan 17, 2017):</label>
 		<input id='date' onKeyDown="if(event.keyCode==13) myFunction();">
 		<button type='button' onclick="myFunction()">submit</button>
 	</div>
